trunk/tests/kiama/negative/name_errors/L4/4_arrayname2.ob
MODULE arrayname2;

TYPE
    atype2 = ARRAY 3 * aconst OF INTEGER;

END arrayname2.
